MDEV-13995 MAX(timestamp) returns a wrong result near DST change